@@ -1,1 +1,6 @@
-Malte Thoma <thoma@Tiger.(none)>
+heatload - CPU Load and ACPI Monitor
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+Copyright 2002
+Lennart Poettering <mz686561746c6f6164@poettering.de>
+Malte Thoma <thoma@muenster.de>
