@@ -3,3 +3,4 @@
 Makefile
 Makefile.in
 heatload
+*_new
