@@ -1,8 +1,8 @@
-// generated 2002/12/8 21:57:17 CET by thoma@Tiger.(none)
+// generated 2002/12/9 7:53:24 CET by thoma@Tiger.(none)
 // using glademm V1.1.2a_cvs
 //
 // DO NOT EDIT THIS FILE ! It was created using
-// glade-- /home/thoma/petig/cvs/malte/gtkacpi/heatload.glade
+// glade-- /home/thoma/Berlios/heatload/heatload.glade
 // for gtk 1.2.10 and gtkmm 1.2.10
 //
 // Please modify the corresponding derived classes in ./src/gtk_acpi.cc
@@ -17,15 +17,15 @@ gtk_acpi_glade::gtk_acpi_glade(
    
    Gtk::Window *gtk_acpi = this;
    label_temp_ = manage(new class Gtk::Label("Temp.:"));
-   label_fan_ = manage(new class Gtk::Label("Fan:"));
-   label_ac_ = manage(new class Gtk::Label("AC:"));
    label_temp = manage(new class Gtk::Label("label4"));
-   label_cooling = manage(new class Gtk::Label("label7"));
+   label_bat1_ = manage(new class Gtk::Label("Bat.1:"));
+   label_ac_ = manage(new class Gtk::Label("AC:"));
    label_ac = manage(new class Gtk::Label("label2"));
+   label_bat1 = manage(new class Gtk::Label("label6"));
+   label_fan_ = manage(new class Gtk::Label("Fan:"));
+   label_cooling = manage(new class Gtk::Label("label7"));
    label_load_ = manage(new class Gtk::Label("Load:"));
    label_load = manage(new class Gtk::Label("label9"));
-   label_bat1_ = manage(new class Gtk::Label("Bat.1:"));
-   label_bat1 = manage(new class Gtk::Label("label6"));
    
    Gtk::Table *table2 = manage(new class Gtk::Table(5, 4, false));
    frame_label = manage(new class Gtk::Frame());
@@ -37,26 +37,34 @@ gtk_acpi_glade::gtk_acpi_glade(
    label_temp_->set_padding(0,0);
    label_temp_->set_justify(GTK_JUSTIFY_CENTER);
    label_temp_->set_line_wrap(false);
-   label_fan_->set_alignment(0,0.5);
-   label_fan_->set_padding(0,0);
-   label_fan_->set_justify(GTK_JUSTIFY_CENTER);
-   label_fan_->set_line_wrap(false);
-   label_ac_->set_alignment(0,0.5);
-   label_ac_->set_padding(0,0);
-   label_ac_->set_justify(GTK_JUSTIFY_CENTER);
-   label_ac_->set_line_wrap(false);
    label_temp->set_alignment(7.45058e-09,0.5);
    label_temp->set_padding(0,0);
    label_temp->set_justify(GTK_JUSTIFY_CENTER);
    label_temp->set_line_wrap(false);
-   label_cooling->set_alignment(0,0.5);
-   label_cooling->set_padding(0,0);
-   label_cooling->set_justify(GTK_JUSTIFY_CENTER);
-   label_cooling->set_line_wrap(false);
+   label_bat1_->set_alignment(0,0.5);
+   label_bat1_->set_padding(0,0);
+   label_bat1_->set_justify(GTK_JUSTIFY_CENTER);
+   label_bat1_->set_line_wrap(false);
+   label_ac_->set_alignment(0,0.5);
+   label_ac_->set_padding(0,0);
+   label_ac_->set_justify(GTK_JUSTIFY_CENTER);
+   label_ac_->set_line_wrap(false);
    label_ac->set_alignment(0,0.5);
    label_ac->set_padding(0,0);
    label_ac->set_justify(GTK_JUSTIFY_CENTER);
    label_ac->set_line_wrap(false);
+   label_bat1->set_alignment(0,0.5);
+   label_bat1->set_padding(0,0);
+   label_bat1->set_justify(GTK_JUSTIFY_CENTER);
+   label_bat1->set_line_wrap(false);
+   label_fan_->set_alignment(0,0.5);
+   label_fan_->set_padding(0,0);
+   label_fan_->set_justify(GTK_JUSTIFY_CENTER);
+   label_fan_->set_line_wrap(false);
+   label_cooling->set_alignment(0,0.5);
+   label_cooling->set_padding(0,0);
+   label_cooling->set_justify(GTK_JUSTIFY_CENTER);
+   label_cooling->set_line_wrap(false);
    label_load_->set_alignment(0,0.5);
    label_load_->set_padding(0,0);
    label_load_->set_justify(GTK_JUSTIFY_CENTER);
@@ -65,26 +73,18 @@ gtk_acpi_glade::gtk_acpi_glade(
    label_load->set_padding(0,0);
    label_load->set_justify(GTK_JUSTIFY_CENTER);
    label_load->set_line_wrap(false);
-   label_bat1_->set_alignment(0,0.5);
-   label_bat1_->set_padding(0,0);
-   label_bat1_->set_justify(GTK_JUSTIFY_CENTER);
-   label_bat1_->set_line_wrap(false);
-   label_bat1->set_alignment(0,0.5);
-   label_bat1->set_padding(0,0);
-   label_bat1->set_justify(GTK_JUSTIFY_CENTER);
-   label_bat1->set_line_wrap(false);
    table2->set_row_spacings(0);
    table2->set_col_spacings(0);
    table2->attach(*label_temp_, 0, 1, 0, 1, GTK_FILL, 0, 0, 0);
-   table2->attach(*label_fan_, 0, 1, 1, 2, GTK_FILL, 0, 0, 0);
-   table2->attach(*label_ac_, 0, 1, 2, 3, GTK_FILL, 0, 0, 0);
    table2->attach(*label_temp, 1, 2, 0, 1, GTK_FILL, 0, 0, 0);
-   table2->attach(*label_cooling, 1, 2, 1, 2, GTK_FILL, 0, 0, 0);
-   table2->attach(*label_ac, 1, 2, 2, 3, GTK_FILL, 0, 0, 0);
-   table2->attach(*label_load_, 2, 3, 0, 1, GTK_FILL, 0, 0, 0);
-   table2->attach(*label_load, 3, 4, 0, 1, GTK_FILL, 0, 0, 0);
-   table2->attach(*label_bat1_, 2, 3, 1, 2, GTK_FILL, 0, 0, 0);
-   table2->attach(*label_bat1, 3, 4, 1, 2, GTK_FILL, 0, 0, 0);
+   table2->attach(*label_bat1_, 0, 1, 3, 4, GTK_FILL, 0, 0, 0);
+   table2->attach(*label_ac_, 2, 3, 1, 2, GTK_FILL, 0, 0, 0);
+   table2->attach(*label_ac, 3, 4, 1, 2, GTK_FILL, 0, 0, 0);
+   table2->attach(*label_bat1, 1, 4, 3, 4, GTK_FILL, 0, 0, 0);
+   table2->attach(*label_fan_, 2, 3, 0, 1, GTK_FILL, 0, 0, 0);
+   table2->attach(*label_cooling, 3, 4, 0, 1, GTK_FILL, 0, 0, 0);
+   table2->attach(*label_load_, 0, 1, 1, 2, GTK_FILL, 0, 0, 0);
+   table2->attach(*label_load, 1, 2, 1, 2, GTK_FILL, 0, 0, 0);
    frame_label->set_shadow_type(GTK_SHADOW_NONE);
    frame_label->set_label_align(0,0);
    frame_label->add(*table2);
@@ -99,20 +99,21 @@ gtk_acpi_glade::gtk_acpi_glade(
    table1->attach(*frame_label, 0, 1, 1, 2, GTK_FILL, GTK_EXPAND|GTK_FILL, 0, 0);
    table1->attach(*label_decoration, 0, 2, 0, 1, GTK_EXPAND|GTK_SHRINK|GTK_FILL, GTK_SHRINK|GTK_FILL, 0, 0);
    table1->attach(*frame_draw, 1, 2, 1, 2, GTK_EXPAND|GTK_SHRINK|GTK_FILL, GTK_SHRINK|GTK_FILL, 0, 0);
-   gtk_acpi->set_title("GTK ACPI");
+   gtk_acpi->set_title("HeatLoad");
    gtk_acpi->set_modal(false);
    gtk_acpi->set_position(GTK_WIN_POS_NONE);
+   gtk_acpi->set_policy(true, true, true);
    gtk_acpi->add(*table1);
    label_temp_->show();
-   label_fan_->show();
-   label_ac_->show();
    label_temp->show();
-   label_cooling->show();
+   label_bat1_->show();
+   label_ac_->show();
    label_ac->show();
+   label_bat1->show();
+   label_fan_->show();
+   label_cooling->show();
    label_load_->show();
    label_load->show();
-   label_bat1_->show();
-   label_bat1->show();
    table2->show();
    frame_label->show();
    label_decoration->show();
