@@ -1,8 +1,8 @@
-// generated 2002/12/8 21:55:53 CET by thoma@Tiger.(none)
+// generated 2002/12/9 7:53:24 CET by thoma@Tiger.(none)
 // using glademm V1.1.2a_cvs
 //
 // DO NOT EDIT THIS FILE ! It was created using
-// glade-- /home/thoma/petig/cvs/malte/gtkacpi/heatload.glade
+// glade-- /home/thoma/Berlios/heatload/heatload.glade
 // for gtk 1.2.10 and gtkmm 1.2.10
 //
 // Please modify the corresponding derived classes in ./src/gtk_acpi.hh and./src/gtk_acpi.cc
@@ -19,15 +19,15 @@ class gtk_acpi_glade : public Gtk::Window
 protected:
         
         class Gtk::Label *label_temp_;
-        class Gtk::Label *label_fan_;
-        class Gtk::Label *label_ac_;
         class Gtk::Label *label_temp;
-        class Gtk::Label *label_cooling;
+        class Gtk::Label *label_bat1_;
+        class Gtk::Label *label_ac_;
         class Gtk::Label *label_ac;
+        class Gtk::Label *label_bat1;
+        class Gtk::Label *label_fan_;
+        class Gtk::Label *label_cooling;
         class Gtk::Label *label_load_;
         class Gtk::Label *label_load;
-        class Gtk::Label *label_bat1_;
-        class Gtk::Label *label_bat1;
         class Gtk::Frame *frame_label;
         class Gtk::Label *label_decoration;
         class Gtk::Frame *frame_draw;
