@@ -43,3 +43,12 @@
 
 2002/12/8 22:25:33 CET
 	update files from .glade file
+
+2002/12/8 23:45:22 CET
+	update files from .glade file
+
+2002/12/8 23:46:30 CET
+	update files from .glade file
+
+2002/12/9 7:53:24 CET
+	update files from .glade file
